--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <p>hello world</p>
     <p>this is my first program</p>
+    <p>I love to program</p>
+    <p>It makes me so happy</p>
 </body>
 </html>
