--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>this is my first program</p>
     <p>I love to program</p>
     <p>It makes me so happy</p>
+    <p>my first class</p>
 </body>
 </html>
